[bugfix][ORANGE-207] Fixed text align

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -1391,4 +1391,5 @@ ion-option-button.option-control.button {
   width: 40px;
   margin-right: 10px;
   margin-top: 1px;
+  vertical-align: middle;
 }
